[gd_scene load_steps=6 format=3 uid="uid://brymg37k6o1r8"]

[ext_resource type="Script" path="res://minigames/catcher/catcher game.gd" id="1_ad6di"]
[ext_resource type="PackedScene" uid="uid://50t6kiwg2n4s" path="res://food.tscn" id="2_na3fb"]
[ext_resource type="PackedScene" uid="uid://bx4gtf5qs02uw" path="res://player.tscn" id="3_bwhvl"]
[ext_resource type="PackedScene" uid="uid://b8qkmm628jxf5" path="res://droop.tscn" id="4_0u1m7"]
[ext_resource type="Texture2D" uid="uid://dcvxtms4hte5q" path="res://asset/brick-wall-background-cartoon-drawing-artwork-vector_893055-15882-ezgif.com-avif-to-jpg-converter.jpg" id="5_0gagx"]

[node name="Node2D" type="Node2D"]
position = Vector2(69.2964, 578.413)
script = ExtResource("1_ad6di")
enemy_type = Array[PackedScene]([ExtResource("2_na3fb"), ExtResource("4_0u1m7")])
speed = 100
scroll_speed = 0
score_n = 2
targetpos = 400

[node name="enemy spawner" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
process_callback = 0
autostart = true

[node name="player" parent="." instance=ExtResource("3_bwhvl")]
position = Vector2(-23.2357, 7.39771)
speed = 1000

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 960)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(586.863, 186.468)
scale = Vector2(1.38743, 1.09152)
texture = ExtResource("5_0gagx")

[node name="Timer2" type="Timer" parent="."]
wait_time = 40.0
autostart = true

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(-43.6644, -566.604)

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D"]
layout_direction = 1
offset_right = 40.0
offset_bottom = 50.0

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Node2D/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Node2D/HBoxContainer/VBoxContainer"]
layout_mode = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
